Oops forgot to push changes until just now! Coded hamburger nav bar and 'about' section

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,268 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* ==========================================================================
+
+  /* BASE STYLES */
+  * {
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box;
+  }
+
+  body {
+    background-image: url("https://images.unsplash.com/photo-1527903789995-dc8ad2ad6de0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1420&q=80");
+    background-repeat: no-repeat;
+    background-color: #DEDFE1; 
+    background-size: auto;
+  }
+
+  h1 {
+    font-family: 'Amatic SC', cursive;
+    font-size: 2.5rem;
+  }
+
+  p {
+   font-family: 'Josefin Slab', serif;
+   font-size: 1.5rem;
+  }
+
+
+  /* DROP-DOWN NAVIGATION BAR */
+
+  .nav-bar {
+    min-width: 100vw; 
+    height: 70px; 
+    background: #3D2825;
+    font-family: 'Josefin Slab', serif; 
+  }
+
+  .brand {
+    float: left; 
+    position: absolute; 
+    padding-left: 20px; 
+    line-height: 70px; 
+    font-size: 1.5em; 
+  }
+
+  .brand a {
+    text-decoration: none;
+    color: white; 
+    font-family: 'Amatic SC', cursive;
+    font-size: 2.5rem;
+  }
+
+  .nav-container {
+    max-width: 1000px; 
+    margin: 0 auto; 
+  }
+
+  nav {
+    float: right; 
+  }
+
+  nav ul {
+    list-style: none;
+  }
+
+  nav ul li {
+    float: left; 
+    position: relative; 
+  }
+
+  nav ul li a {
+    display: block; 
+    padding: 0 20px; 
+    line-height: 70px; 
+    background: #6E4D4D;
+    text-decoration: none; 
+    color: #fff; 
+  }
+
+  nav ul li a:hover {
+    background: #3B2929; 
+    color: #fff; 
+  }
+
+  nav ul li a:not(:only-child):after {
+    content: '▼'; 
+    padding-left: 5px; 
+  }
+
+  nav ul li ul li {
+    min-width: 190px; 
+  }
+
+  nav ul li ul li a {
+    padding: 15px; 
+    line-height: 20px; 
+  }
+
+  .nav-dropdown {
+    position: absolute; 
+    display: none; 
+    z-index: 1;
+  }
+
+  .nav-mobile {
+    display: none; 
+    position: absolute; 
+    top: 0; 
+    right: 0; 
+    height: 70px; 
+    width: 70px; 
+  }
+
+  #nav-toggle {
+    position: absolute; 
+    left: 18px; 
+    top: 22px; 
+    cursor: pointer; 
+    padding: 10px 35px 15px 0px; 
+  }
+
+  #nav-toggle span,
+  #nav-toggle span::before,
+  #nav-toggle span::after {
+    position: absolute; 
+    display: block; 
+    content: ''; 
+    background: #fff; 
+    height: 5px; 
+    width: 35px; 
+    transition: all 300ms ease-in-out; 
+  }
+
+  #nav-toggle span::before {
+    top: -10px; 
+  }
+
+  #nav-toggle span::after{
+    bottom: -10px; 
+  }
+
+  #nav-toggle.active span{
+    background-color: transparent;
+  }
+
+  #nav-toggle.active span::before, #nav-toggle.active span::after {
+    top: 0; 
+  }
+
+  #nav-toggle.active span::before {
+    transform: rotate(45deg); 
+  }
+
+  #nav-toggle.active span::after {
+    transform: rotate(-45deg);
+  }
+
+  @media only screen and (max-width: 799px) {
+    
+    .nav-mobile {
+      display: block; 
+    }
+    
+    nav {
+      width: 100%; 
+      padding: 35px 0 15px; 
+      border-radius: 20px;
+    }
+
+    nav ul {
+      display: none; 
+    }
+
+    nav ul li {
+      float: none;
+    }
+
+    nav ul li a {
+      padding: 15px;
+      line-height: 20px; 
+      padding-left: 25%; 
+    }
+
+    nav ul li ul li a {
+      padding-left: 30%; 
+    }
+
+    .nav-dropdown {
+      position: static; 
+    }
+  }
+
+  
+  /* END DROP-DOWN NAV BAR */
+
+  /* ABOUT */
+
+  .about {
+    padding: 15px; 
+    margin: 15px; 
+    background-color: rgba(210, 186, 174, 0.80);
+    border-radius: 50px;
+  }
+
+  #avatar {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #avatar img {
+    max-width: 70%;
+    border-radius: 79% 21% 74% 26% / 37% 56% 44% 63%
+    ;
+    margin: 10px;
+    position: relative;
+  }
+
+  .about-description {
+    padding: 35px; 
+  }
+
+  
+  
+
+/* TABLET STYLES */
+
+@media screen and (min-width: 799px) {
+  .nav-list {
+    display: block !important;
+  }
+  
+
+  /* "about - TABLET " */
+
+  .about {
+    display: flex; 
+    align-items: left; 
+    justify-content: center;
+    flex-direction: row;
+    max-width: 60%; 
+    margin: 20px; 
+  }
+
+  .about-description {
+    max-width: 40%;
+    margin: 30px;
+    padding: 15px; 
+  }
+
+  .avatar-image img {
+    float: none;
+    max-width: 100%;
+    margin-top: 40px;
+  }
+}
+
+
+/* END TABLET STYLES */
+
+
+  /*
+  ==========================================================================
    Helper classes
    ========================================================================== */
 
