--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ textarea {
   footer {  
     justify-content: center;
     text-align: center;
-    background-color: #3D2825;
+    background-color: #6E4D4D;
     border-radius: 50px;
     color: white; 
     padding: 30px; 
@@ -336,7 +336,7 @@ textarea {
   }
 
   .about-description {
-    padding: 35px; 
+    padding: 25px; 
   }
 
   /* END ABOUT */
@@ -365,6 +365,7 @@ textarea {
   .form-style {
     margin: 10px auto;
     width: 90%;
+    max-width: 440px;
   }
 
   /* END TATTOO CONTACT FORM */
@@ -429,10 +430,50 @@ textarea {
 
 /* DESKTOP STYLES */
 
+@media screen and (min-width: 1200px) {
+  .main-content-wrapper {
+    display: flex;
+    flex-shrink: inherit;
+    max-height: 600px;
+  }
+
+  .about {
+    flex-direction: column;
+    max-width: 50%;
+    max-height: 100%;
+    margin: 0;
+  }
+
+  .about h1 {
+    margin: 0;
+  }
+
+  #avatar {
+    padding-top: 40px;
+  }
+
+  .about-description {
+    max-width: 100%;
+    margin: 7px;
+  }
+
+  #tattoo-contact-form {
+    background-color: #b7b7a9;
+  }
+
+  footer {
+    margin: 20px;
+    padding: 100px;
+  }
+}
+
+/* desktop style for extra large monitors */
+
 @media screen and (min-width: 1415px) {
   body {
     background-size: cover;
   }
+
   
 }
 
